--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "lucide-svelte": "^0.321.0",
         "mode-watcher": "^0.2.0",
         "radix-icons-svelte": "^1.2.1",
+        "svelte-scrollto": "^0.2.0",
         "svelte-sonner": "^0.3.11",
         "sveltekit-superforms": "^1.13.4",
         "tailwind-merge": "^2.2.1",
