--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "type": "module",
     "dependencies": {
         "@internationalized/date": "^3.5.1",
+        "@unovis/svelte": "^1.3.3",
+        "@unovis/ts": "^1.3.3",
         "bits-ui": "^0.16.0",
         "clsx": "^2.1.0",
         "cmdk-sv": "^0.0.13",
         "embla-carousel-svelte": "8.0.0-rc22",
+        "express": "^4.18.2",
         "formsnap": "^0.4.3",
+        "leaflet": "^1.9.4",
         "lucide-svelte": "^0.321.0",
         "mode-watcher": "^0.2.0",
         "radix-icons-svelte": "^1.2.1",
